[gd_scene load_steps=14 format=3 uid="uid://btf0ql433nemx"]

[ext_resource type="Script" path="res://scripts/monkey_corpse.gd" id="1_kskh6"]
[ext_resource type="FontFile" uid="uid://dyni14hwwignh" path="res://assets/fonts/Free_Pixel_Font_Devilsworkshop_v01/ThickThinPixel.ttf" id="2_pl4xj"]
[ext_resource type="AudioStream" uid="uid://fd5fkmejyplf" path="res://sounds/Game/Gold1.wav" id="3_o0upi"]

[sub_resource type="Gradient" id="Gradient_u7jx7"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_62bl3"]
gradient = SubResource("Gradient_u7jx7")

[sub_resource type="Curve" id="Curve_o72ir"]
max_value = 4.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 8), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wq7n4"]
curve = SubResource("Curve_o72ir")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wg55f"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(25, 25, 1)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -30.0
angle_max = 30.0
initial_velocity_max = 669.35
gravity = Vector3(0, 1000, 0)
damping_min = 50.0
damping_max = 100.0
scale_curve = SubResource("CurveTexture_wq7n4")
color_ramp = SubResource("GradientTexture1D_62bl3")

[sub_resource type="Gradient" id="Gradient_meiwk"]
colors = PackedColorArray(1, 1, 1, 1, 0.466667, 0.466667, 0.466667, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_46cw5"]
gradient = SubResource("Gradient_meiwk")
width = 2
height = 2
fill = 1
fill_to = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_uaryk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_am0mq"]
resource_name = "fade-in-out"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvuvq"]
_data = {
"RESET": SubResource("Animation_uaryk"),
"fade-in-out": SubResource("Animation_am0mq")
}

[node name="PointsEarnedDisplay" type="Node2D"]
script = ExtResource("1_kskh6")

[node name="PointsFx" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
rotation = -1.5708
emitting = false
amount = 10
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_wg55f")
texture = SubResource("GradientTexture2D_46cw5")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="Animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kvuvq")
}

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_pl4xj")
theme_override_font_sizes/font_size = 16
text = "+10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStream" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_o0upi")
